# vulpes-engine

./: .gitignore  CMakeLists.txt  main.cpp
include/glm/: CMakeLists.txt
lib/: libGLEW.so.2.1.0
res/shaders/world/: vertex.glsl
src/: main.cpp
src/shaders/: ShaderLoader.cpp  ShaderLoader.h
